# anything2md

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  convert.py  docx2md.py  epub2md.py  pdf2md.py  pipeline.py  pyproject.toml  requirements.txt
anything2md/: __init__.py  cli.py  converter.py  formats.py  markitdown_runner.py  ocr_runner.py  organize.py  scan_detector.py
doc2md/: __init__.py  cli.py  converter.py  formats.py  pandoc_runner.py  topics.py  utils.py
md2intro/: __init__.py  assemble.py  config.py  gemini.py  parse.py  runner.py
scripts/: check_markdown.py
tests/: test_converter_pdf.py  test_ocr_runner.py  test_organize.py  test_pandoc_runner.py  test_scan_detector.py
